--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "ecommerce_app",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "node-releases": "^2.0.18",
+    "rails-erb-loader": "^5.5.2",
+    "routes": "^2.1.0",
+    "sweetalert2": "^11.14.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
+  },
   "scripts": {
     "start": "./bin/webpack-dev-server"
   }
