--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^5.3.3",
+    "flickity": "^3.0.0",
     "jquery": "^3.7.1",
     "node-releases": "^2.0.18",
     "rails-erb-loader": "^5.5.2",
