--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.7.1",
     "node-releases": "^2.0.18",
     "rails-erb-loader": "^5.5.2",
+    "rails_admin": "3.2.1",
     "routes": "^2.1.0",
     "sweetalert2": "^11.14.3",
     "turbolinks": "^5.2.0"
@@ -22,5 +23,8 @@
   },
   "scripts": {
     "start": "./bin/webpack-dev-server"
+  },
+  "resolutions": {
+    "rails_admin/@fortawesome/fontawesome-free": "^5.15.0"
   }
 }
